--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 title: Émilie Saverna Mélodia
-description: Curriculum Vitae
+description: BIM manageuse, formatrice, geek, photographe…
 show_downloads: false
